--- a/game-page.html
+++ b/game-page.html
@@ -54,12 +54,12 @@
 				<div class="questions-box regular-text">
 					<p class="question">Are you bored on hot summer day?</p>
 					<img class="info-sec-img"
-						src="./images/Chubbs DrawKit_Vector_Illustrations-10.png"
+						src="./img/Chubbs DrawKit_Vector_Illustrations-10.png"
 						width="145px"
 					/>
 					<p class="question">or maybe hours in the office drag mercilessly?</p>
 					<img class="info-sec-img"
-						src="./images/Chubbs DrawKit_Vector_Illustrations-07.png"
+						src="./img/Chubbs DrawKit_Vector_Illustrations-07.png"
 						width="160px"
 					/>
 				</div>
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="images-field">
-					<img class="meme" src="./images/maxresdefault (2).jpg" width="300px" />
+					<img class="meme" src="./img/maxresdefault (2).jpg" width="300px" />
 					<!-- <img src="./current-snake/aerAoYO_700bwp.webp" width="300px" /> -->
 				</div>
 			</section>
@@ -85,20 +85,13 @@
 				<p class="heading-text">Games we are offering</p>
 				<div class="games-content">
 					<img class="our-games-img"
-						src="./images/Chubbs DrawKit_Vector_Illustrations-04.png"
+						src="./img/Chubbs DrawKit_Vector_Illustrations-04.png"
 						width="300px"
 					/>
 					<div class="games">
-						<a href="./images/snake.html" class="btn game snakeBtn">
+						<a href="./current-snake/snake.html" class="btn game snakeBtn">
 							<span class="text-name">Snake</span>
-							<!-- <img
-							
-								src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/228BE6/external-snake-animal-flaticons-lineal-color-flat-icons-2.png"
-							/> -->
-							<!-- <img
-								class="snake-i"
-								src="https://img.icons8.com/color/48/000000/snake.png"
-							/> -->
+		
 						</a>
 						<a href="./hide&seek/index.html" class="btn game hideBtn">
 							<span class="text-name">Hide&Seek</span>
