fixed path in links, hide&seek game and mediaqueries

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 	</head>
 	<body>
 		<header>
-			<div class="page-name">
+			<a href="#">
+				<div class="page-name">
 				Gaming cap
-				<div class="logo">
-					<img
+					<div class="logo">
+						<img
 						src="https://img.icons8.com/external-victoruler-solid-victoruler/64/000000/external-cap-clothes-and-outfit-victoruler-solid-victoruler.png"
 						width="40px"
-					/>
+						/>
+					</div>
 				</div>
-			</div>
+			</a>
 			<nav>
 				<ul class="main-nav-list">
 					<a href="./current-snake/snake.html"><li></li>Snake</li></a>
