--- a/current-snake/snake.html
+++ b/current-snake/snake.html
@@ -32,7 +32,7 @@
 	</style>
 	<body>
 		<header>
-			<a href="../game-page.html">
+			<a href="../index.html">
 				<div class="page-name">
 					Gaming cap
 					<div class="logo">
@@ -47,7 +47,7 @@
 				<ul class="main-nav-list">
 					<a href="#"><li>Snake</li></a>
 					<a href="../hide&seek/index.html"><li>Hide&Seek</li></a>
-					<a href="../game-page.html"><li>About us</li></a>
+					<a href="../index.html"><li>About us</li></a>
 				</ul>
 			</nav>
 			<button class="btn-mobile-nav">
