--- a/hide&seek/index.html
+++ b/hide&seek/index.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="../game-page.html">
+			<a href="../index.html">
 				<div class="page-name">
 					Gaming cap
 					<div class="logo">
@@ -40,7 +40,7 @@
 				<ul class="main-nav-list">
 					<a href="../current-snake/snake.html"><li>Snake</li></a>
 					<a href="../hide&seek/index.html"><li>Hide&Seek</li></a>
-					<a href="../game-page.html"><li>About us</li></a>
+					<a href="../index.html"><li>About us</li></a>
 				</ul>
 			</nav>
 			<button class="btn-mobile-nav">
